--- a/free-nodes/2024-3-7-clash-windows.htm
+++ b/free-nodes/2024-3-7-clash-windows.htm
@@ -1,8 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
-<link rel="canonical" href="https://clashgithub.github.io" />
+    <link rel="canonical" href="https://clashgithub.github.io" />
 <title>3月7日19.8M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -42,9 +42,9 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3332997411212854"
      crossorigin="anonymous"></script>
 </head>
-	
+
 <body>
-<!-- header -->
+    <!-- header -->
 	<div class="header" id="ban">
 		<div class="container">
 			<div class="w3ls_logo">
@@ -80,24 +80,24 @@
 		</div>
 	</div>
 <!-- //header -->
-<!-- about -->
-	<div class="about">
-		<div class="container">
-			<h1 style="word-break: break-all;">3月7日19.8M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</h1>
-			<ul>
-				<li><a href="/">首页</a><i>|</i></li>
-				<li><a href="/free-nodes/">免费节点</a><i>|</i></li>
-				<li>正文</li>
-			</ul>
-		</div>
-	</div>
-<!-- //about -->
-<!-- single -->
-	<div class="single">
-		<div class="container">
-
-			<div class="wthree_single_grid1">
-				<p>这次的更新跨足了韩国、加拿大、欧洲、日本、美国、香港、新加坡等多个地区，节点覆盖广泛，最高速度可达19.8 M/S。这意味着，无论您身处何处，都能享受到更快、更稳定的网络连接。这些新节点的加入，不仅为您提供了更广泛的网络覆盖，还能让您轻松解锁全球各地的网络内容，尽情畅游互联网。无论是日本的动漫、美国的影视、还是欧洲的新闻，都能够一手掌握。只需复制下方提供的v2ray/Clash订阅链接，添加到您的客户端，就能立即体验到新节点带来的畅快感受。这次更新的目的就是为了让您拥有更畅快、更愉悦的网络体验，享受高速流畅的网络连接。随着全球互联网的发展，网络已经成为我们生活中不可或缺的一部分，而这次更新就是为了让您更好地融入这个数字化的世界。</p><p>&nbsp;</p><h3>高速机场推荐1【FCCloud】</h3><p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">新用户8折优惠，费用低至0.33元/天,无视高峰，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！
+    <!-- about -->
+    <div class="about">
+        <div class="container">
+            <h1 style="word-break: break-all;">3月7日19.8M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</h1>
+            <ul>
+                <li><a href="/">首页</a><i>|</i></li>
+                <li><a href="/free-nodes/">免费节点</a><i>|</i></li>
+                <li>正文</li>
+            </ul>
+        </div>
+    </div>
+    <!-- //about -->
+    <!-- single -->
+    <div class="single">
+        <div class="container">
+            <div class="col-md-9">
+                <div class="wthree_single_grid1">
+                    <p>这次的更新跨足了韩国、加拿大、欧洲、日本、美国、香港、新加坡等多个地区，节点覆盖广泛，最高速度可达19.8 M/S。这意味着，无论您身处何处，都能享受到更快、更稳定的网络连接。这些新节点的加入，不仅为您提供了更广泛的网络覆盖，还能让您轻松解锁全球各地的网络内容，尽情畅游互联网。无论是日本的动漫、美国的影视、还是欧洲的新闻，都能够一手掌握。只需复制下方提供的v2ray/Clash订阅链接，添加到您的客户端，就能立即体验到新节点带来的畅快感受。这次更新的目的就是为了让您拥有更畅快、更愉悦的网络体验，享受高速流畅的网络连接。随着全球互联网的发展，网络已经成为我们生活中不可或缺的一部分，而这次更新就是为了让您更好地融入这个数字化的世界。</p><p>&nbsp;</p><h3>高速机场推荐1【FCCloud】</h3><p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">新用户8折优惠，费用低至0.33元/天,无视高峰，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！
 IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
 
 
@@ -110,35 +110,54 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 
 <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">自用机场，稳定第一位</p>
 
-<p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://home.kuaimao.io/#/register?code=" data-code="FGw9HJH0" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">快猫官网（点击注册）</a>】</p><p>&nbsp;</p><p></p><h2>订阅链接</h2><p>&nbsp;</p><p><strong>clash订阅链接</strong></p><p>https://clashgithub.github.io/uploads/2024/03/0-20240307.yaml</p><p>https://clashgithub.github.io/uploads/2024/03/1-20240307.yaml</p><p>https://clashgithub.github.io/uploads/2024/03/2-20240307.yaml</p><p>https://clashgithub.github.io/uploads/2024/03/3-20240307.yaml</p><p>https://clashgithub.github.io/uploads/2024/03/4-20240307.yml</p><p>&nbsp;</p><p><strong>v2ray订阅链接:</strong></p><p>https://clashgithub.github.io/uploads/2024/03/0-20240307.txt</p><p>https://clashgithub.github.io/uploads/2024/03/1-20240307.txt</p><p>https://clashgithub.github.io/uploads/2024/03/2-20240307.txt</p><p>https://clashgithub.github.io/uploads/2024/03/3-20240307.txt</p><p>https://clashgithub.github.io/uploads/2024/03/4-20240307.txt</p><p>&nbsp;</p><p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://qingyun.world/#/register?code=" data-code="krDNpzq7" rel="nofollow noopener" style="color:#c00;">轻云</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>			</div>
-
-            <div class="col-md-12 mt-5">
-                                <p>上一个：<a href="/free-nodes/2024-3-6-clash-node.htm">3月6日18M/S|Shadowrocket/V2ray/Clash/SSR免费节点每天更新订阅链接</a></p>
-                                <p>下一个：<a href="/free-nodes/2024-3-8-free-shadowrocket-node.htm">3月8日22M/S|Clash/SSR/Shadowrocket/V2ray免费节点每天更新订阅链接</a></p>
+<p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://home.kuaimao.io/#/register?code=" data-code="FGw9HJH0" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">快猫官网（点击注册）</a>】</p><p>&nbsp;</p><p></p><h2>订阅链接</h2><p>&nbsp;</p><p><strong>clash订阅链接</strong></p><p>https://clashgithub.github.io/uploads/2024/03/0-20240307.yaml</p><p>https://clashgithub.github.io/uploads/2024/03/1-20240307.yaml</p><p>https://clashgithub.github.io/uploads/2024/03/2-20240307.yaml</p><p>https://clashgithub.github.io/uploads/2024/03/3-20240307.yaml</p><p>https://clashgithub.github.io/uploads/2024/03/4-20240307.yml</p><p>&nbsp;</p><p><strong>v2ray订阅链接:</strong></p><p>https://clashgithub.github.io/uploads/2024/03/0-20240307.txt</p><p>https://clashgithub.github.io/uploads/2024/03/1-20240307.txt</p><p>https://clashgithub.github.io/uploads/2024/03/2-20240307.txt</p><p>https://clashgithub.github.io/uploads/2024/03/3-20240307.txt</p><p>https://clashgithub.github.io/uploads/2024/03/4-20240307.txt</p><p>&nbsp;</p><p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://qingyun.world/#/register?code=" data-code="krDNpzq7" rel="nofollow noopener" style="color:#c00;">轻云</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>                </div>
+                <div class="col-md-12 mt-5">
+                                        <p>上一个：<a href="/free-nodes/2024-3-6-clash-node.htm">3月6日18M/S|Shadowrocket/V2ray/Clash/SSR免费节点每天更新订阅链接</a></p>
+                                        <p>下一个：<a href="/free-nodes/2024-3-8-free-shadowrocket-node.htm">3月8日22M/S|Clash/SSR/Shadowrocket/V2ray免费节点每天更新订阅链接</a></p>
+                                    </div>
+                                <div class="panel panel-default mt-5">
+                    <div class="panel-heading">
+                        <h3 class="m-0">推荐文章</h3>
+                    </div>
+                    <div class="panel-body">
+                        <ul class="p-0 x-0">
+                                                        <li class="py-2"><a href="/free-nodes/2024-3-6-clash-node.htm">3月6日18M/S|Shadowrocket/V2ray/Clash/SSR免费节点每天更新订阅链接</a></li>
+                                                        <li class="py-2"><a href="/free-nodes/2024-3-5-free-clash.htm">3月5日22.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接</a></li>
+                                                        <li class="py-2"><a href="/free-nodes/2024-3-4-clash-v2ray-ss-ssr.htm">3月4日21.7M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
+                                                        <li class="py-2"><a href="/free-nodes/2024-3-3-free-v2ray-subscribe.htm">3月3日19M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接</a></li>
+                                                        <li class="py-2"><a href="/free-nodes/2024-3-2-node-share.htm">3月2日22.2M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接</a></li>
+                                                        <li class="py-2"><a href="/free-nodes/2024-3-1-free-node-subscribe-links.htm">3月1日22.5M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接</a></li>
+                                                        <li class="py-2"><a href="/free-nodes/2024-2-29-clash-node.htm">2月29日20.8M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接</a></li>
+                                                        <li class="py-2"><a href="/free-nodes/2024-2-28-free-ssr-node.htm">2月28日20.3M/S|V2ray/Clash/SSR/Shadowrocket免费节点每天更新订阅链接</a></li>
+                                                    </ul>
+                    </div>
+                </div>
                             </div>
-
-                        <div class="panel panel-default mt-5">
-                <div class="panel-heading">
-                    <h3 class="m-0">推荐文章</h3>
-                </div>
-                <div class="panel-body">
-                    <ul class="p-0 x-0">
-                                                <li class="py-2"><a href="/free-nodes/2024-3-6-clash-node.htm">3月6日18M/S|Shadowrocket/V2ray/Clash/SSR免费节点每天更新订阅链接</a></li>
-                                                <li class="py-2"><a href="/free-nodes/2024-3-5-free-clash.htm">3月5日22.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接</a></li>
-                                                <li class="py-2"><a href="/free-nodes/2024-3-4-clash-v2ray-ss-ssr.htm">3月4日21.7M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
-                                                <li class="py-2"><a href="/free-nodes/2024-3-3-free-v2ray-subscribe.htm">3月3日19M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接</a></li>
-                                                <li class="py-2"><a href="/free-nodes/2024-3-2-node-share.htm">3月2日22.2M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接</a></li>
-                                                <li class="py-2"><a href="/free-nodes/2024-3-1-free-node-subscribe-links.htm">3月1日22.5M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接</a></li>
-                                                <li class="py-2"><a href="/free-nodes/2024-2-29-clash-node.htm">2月29日20.8M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接</a></li>
-                                                <li class="py-2"><a href="/free-nodes/2024-2-28-free-ssr-node.htm">2月28日20.3M/S|V2ray/Clash/SSR/Shadowrocket免费节点每天更新订阅链接</a></li>
-                                            </ul>
-                </div>
+            <div class="col-md-3">
+                <div class="panel panel-default">
+    <div class="panel-heading">
+        <h3 class="panel-title">热门文章</h3>
+    </div>
+    <div class="panel-body">
+        <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2024-5-10-free-node-subscribe-links.htm" title="5月10日→21M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址">5月10日→21M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-9-clash-windows.htm" title="5月9日→19.8M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址">5月9日→19.8M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-8-node-share.htm" title="5月8日→21.2M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址">5月8日→21.2M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-7-free-subscribe-node.htm" title="5月7日→21.8M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">5月7日→21.8M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-6-node-share.htm" title="5月6日→19.6M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">5月6日→19.6M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-5-free-ssr-subscribe.htm" title="5月5日→22.9M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">5月5日→22.9M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-4-clash-node-daily-updates.htm" title="5月4日→22.7M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址">5月4日→22.7M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-3-clash-v2ray-ss-ssr.htm" title="5月3日→20.3M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">5月3日→20.3M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-2-free-subscribe-node.htm" title="5月2日→19.3M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">5月2日→19.3M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-1-free-v2ray.htm" title="5月1日→18.8M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址">5月1日→18.8M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址</a></li>
+                    </ul>
+    </div>
+</div>
             </div>
-            		</div>
-	</div>
-<!-- //single -->
-
-<!-- footer -->
+        </div>
+    </div>
+    <!-- //single -->
+    <!-- footer -->
 	
 	<div class="copy-right-social">
 		<div class="container">
@@ -167,7 +186,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 	<script src="/assets/addons/xcblog/js/frontend/clashgithub/bootstrap.js"></script>
     <script>
     $(function() {
-        $('.js_to').click(function(){
+        $('.js_to').click(function() {
             var url = $(this).data('url');
             var code = $(this).data('code');
             url += code;
@@ -177,4 +196,5 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     });
     </script>
 </body>
+
 </html>
